# pcs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/borrows/: borrows_graph.rs  borrows_state.rs  borrows_visitor.rs  deref_expansion.rs  deref_expansions.rs  domain.rs  engine.rs  latest.rs  mod.rs  path_condition.rs  reborrowing_dag.rs  region_abstraction.rs  unblock_graph.rs  unblock_reason.rs
src/combined_pcs/: domain.rs  engine.rs  remove.rs
src/free_pcs/check/: checker.rs  consistency.rs  mod.rs
src/free_pcs/impl/: bridge.rs  engine.rs  fpcs.rs  join_semi_lattice.rs  local.rs  mod.rs  place.rs  triple.rs  update.rs
src/free_pcs/results/: cursor.rs  repacks.rs
src/loop/: mod.rs
src/prusti_rustc_interface/: mod.rs
src/rustc_interface/: mod.rs
src/utils/: debug_info.rs  display.rs  mod.rs  mutable.rs  place.rs  place_snapshot.rs  repacker.rs
src/utils/const/: mod.rs
src/visualization/: dot_graph.rs  drawer.rs  graph_constructor.rs  mir_graph.rs  mod.rs
tests/: 01_basic.rs  02_list_zero.rs  03_unnest.rs
visualization/: README.md  deno.json  index.html  nodemon.json  package-lock.json  package.json  script.js  server.py  server.ts  tsconfig.json  webpack.config.js
visualization/.plandex/: project.json
visualization/src/: api.ts  mir_graph.ts  script.ts  script.tsx  types.ts
visualization/src/components/: Assertions.tsx  BasicBlockNode.tsx  BasicBlockTable.tsx  BorrowsAndActions.tsx  Edge.tsx  PCSGraphSelector.tsx  PathConditions.tsx  SymbolicHeap.tsx  Table.tsx
