[package]
name = "pcs"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[dependencies]
itertools = "0.12.0"
derive_more = "0.99"
dot = "0.1"
smallvec = { version = "^1.11", features = ["union", "const_new"] }
regex = "1"
serde = "= 1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"

[dev-dependencies]
reqwest = { version = "^0.11", features = ["blocking"] }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true

[[bin]]
name = "pcs_bin"
path = "src/main.rs"
